@@ -1,3 +1,10 @@
+2005-10-28  Phil Muldoon  <pmuldoon@redhat.com>
+
+	* dialogs/WarnDialog.java (WarnDialog): Added overloaded
+	(title,message) constructor.
+	* dialogs/DialogManager.java (showWarnDialog): Added 
+	overloaded (title,message) constructor.
+
 2005-10-26  Phil Muldoon  <pmuldoon@redhat.com>
 
 	* dialogs/WarnDialog.java: Added Copyright/License Header.
